# weather-prediction-api

./: Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: main.py  predictor.py  utils.py
models/precipitation_fall/: feature_columns.txt  model_metrics.json  precipitation_scaler.joblib  xgb_precipitation_model.joblib
models/rain_or_not/: feature_names.joblib  metrics.json  scaler.joblib
