[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather_prediction_api"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "Weather Prediction API for Sydney"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "joblib>=1.0.1",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.2",
    "requests>=2.26.0",
    "xgboost>=1.6.0",
    "imbalanced-learn>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/weather_api"
"Bug Tracker" = "https://github.com/yourusername/weather_api/issues"
